--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,41 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.app-2{
+  display: flex;
+  justify-content: space-around;
+  place-items: center;
+  width: 100%;
+  padding: 0;
+  border-radius: 2px;
+  background-image: linear-gradient(#800080 20%,#FF00FF 80%);
+  top: 0;
+  position: fixed;
+}
+.nav{
+  width: 60%;
+  margin: top 20px;
+  margin-right: 200px;
+  display: inline-flex;
+  justify-content:space-around;
+  color: black;
+}
+.Link{
+  color: aquamarine;
+  font-style: normal;
+  text-transform: uppercase;
+  font-weight: bold;
+  
+  font-size: 17px;
+  
+}
+.logo{
+      width: 40%;
+      padding-left: 40px;
+      margin-left: 160px;
+      margin: top 10px;
 
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,7 +56,15 @@
   color: white;
   
 }
-
+.container{
+    padding-top: 10%;
+    width: 100%;
+    height: max-content;
+    padding-bottom: 10%;
+    align-items: center;
+    text-align: center;
+   
+}
 .App-link {
   color: #61dafb;
 }
